syntax = "proto3";
package android_full_next;

message navigationData {
    message navData {
        string navId = 1;
    }
    optional navData navProperties = 48687757;
}
message textRuns {
    message textRun {
        string text = 1;
    }
    repeated textRun run = 1;
}
message thumbnails {
    message thumbnail {
        string url = 1;
        int32 width = 2;
        int32 height = 3;
    }
    repeated thumbnail thumb = 1;
}
message nextRequest {
    int32 int1 = 1;
    message continuationData {
        string token = 1;
        int32 int2 = 2;
    }
    repeated continuationData continuation = 52047593;
}
message simpleText {
    string text = 4;
}
message browseNavigation {
    message browseData {
        string browseId = 2;
        string params = 3;
        string canonicalBaseUrl = 4;
    }
    repeated browseData data = 48687626;
}
message authorData {
    message authorDataContent {
        string authorDisplayName = 1;
        optional browseNavigation navigation = 5;
    }
    optional authorDataContent ac = 1;
}
message authorRendererData {
    optional thumbnails avatars = 1;
    optional textRuns name = 2;
    optional browseNavigation naviData = 4;
    optional textRuns subscribeCount = 5;
    message subscribeButtonData {
        message subContents {
            optional textRuns subscribeButton = 1;
            optional int32 int3 = 3;
            optional int32 int4 = 4;
            optional int32 int6 = 6;
            string channelId = 7;
            optional int32 int8 = 8;
            optional textRuns subscribedLabel = 12;
            optional textRuns subscribeLabel = 13;
            optional textRuns unsubscribeLabel = 16;
            message subAction {
                message sub1 {
                    string id = 1;
                    string params = 3;
                }
                repeated sub1 subscr1 = 68997349;
                message sub2 {
                    string id = 1;
                    string params = 4;
                }
                repeated sub2 subscr2 = 68997401;
            }
            repeated subAction action = 18;
            string identifier = 31;
        }
        repeated subContents content = 55419609;
    }
    repeated subscribeButtonData subscribeButton = 6;
}
message videoMetadataRenderer {
    optional textRuns title = 1;
    optional textRuns viewCount = 2;
    optional textRuns likeText1 = 3;
    optional textRuns dislikeText1 = 4;
    optional textRuns description = 5;
    optional textRuns likeText2 = 6;
    optional textRuns dislikeText2 = 7;
    optional int32 allowRatings = 8;
    /*optional int32 int9 = 9;*/
    optional textRuns publishDate = 10;
    optional int32 likeStatus = 11;
    string videoId = 12;
    message pbVarious13 {
        message pbVarious {
            optional textRuns videoId = 1;
            optional int32 int2 = 2;
            optional int32 int3 = 3;
            repeated simpleText count1 = 4;
            repeated simpleText count2 = 5;
            optional int32 int13 = 13;
            optional int32 int23 = 23;
        }
        repeated pbVarious pb = 60091038;
    }
    repeated pbVarious13 pb13 = 13;
    optional textRuns string17 = 17;
    optional textRuns shortViewCount = 18;
    optional int32 isLimitedState = 24;
    message pbVarious25 {
        message unk1 {
            optional int32 int1 = 2;
        }
        repeated unk1 unk = 71271859;
    }
    repeated pbVarious25 pb25 = 25;
    message videoActions {
        message container {
            optional int32 int3 = 3;
            optional textRuns actionName = 5;
            message pb8 {
                optional int32 int1 = 1;
            }
            repeated pb8 proto8 = 8;
            message pb10 {
                string actionName = 2;
            }
            repeated pb10 proto10 = 10;
            message pb19 {
                message targetDataEntry {
                    optional navigationData targetId = 2;
                }
                repeated targetDataEntry targetEntry = 49706687;
            }
            repeated pb19 proto19 = 19;
        }
        repeated container c = 65153809;
    }
    repeated videoActions videoAction = 31;
    optional textRuns str33 = 33;
    optional textRuns str37 = 37;
    optional int32 pb38 = 38;
    optional int32 pb43 = 43;
}
message compactVideoRenderer {
    string videoId = 1;
    optional thumbnails thumblist = 2;
    optional textRuns titleData = 3;
    optional authorData shortAuthorData = 4;
    optional textRuns publishedTimeText = 5;
    optional textRuns viewCountText = 6;
    optional textRuns lengthText = 7;
    optional navigationData navData = 8;
    optional authorData longAuthorData = 10;
    optional thumbnails authorAvatar = 14;
    optional textRuns shortViewCounts = 23;
}
message root {
    message contents {
        message singleColumnWatchNextResults {
            message contents {
                message results {
                    message contents {
                        message itemSectionRenderer {
                            message contents {
                                repeated videoMetadataRenderer videoMetadata = 51779720;
                                repeated authorRendererData authorData = 51779708;
                                repeated compactVideoRenderer nextVideo = 50630979;
                            }
                            repeated contents content = 1;
                            repeated nextRequest commentRequest = 2;
                            string identifier = 7;
                        }
                        repeated itemSectionRenderer itemSectionRender = 50195462;
                    }
                    repeated contents content = 1;
                }
                repeated results result = 49399797;
            }
            repeated contents content = 1;
        }
        repeated singleColumnWatchNextResults nextResults = 51779735;
    }
    repeated contents content = 7;
    optional navigationData navigationEndpoint = 9;
    message playerOverlays {
        message playerOverlaysRenderer {}
        optional playerOverlaysRenderer overlay = 78882851;
    }
    optional playerOverlays poverlays = 14;
}